# healthcheck-service

./: .env.example  .gitignore  Cargo.toml  README.md  env.example  flake.nix
src/: main.rs  models.rs  storage.rs
static/: index.html  services.json
templates/: incidents.html.tera  index.html.tera
